<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ShoppingList</string>
    <string name="fab_content_description" tools:ignore="ExtraTranslation">Add Item</string>
    <string name="name">TextView</string>
    <string name="todo">TODO</string>
    <string name="amount">TextView</string>
    <string name="todos">TODO</string>
    <string name="todoss">TODO</string>
    <string name="add_new_shopping_item">Add New Shopping Item</string>
    <string name="names">Name</string>
    <string name="amounts">Amount</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
</resources>