<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivDelete"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_delete"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/ivMinus"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_minus"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAmount"
        android:contentDescription="@string/todoss" />

    <ImageView
        android:id="@+id/ivPlus"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_plus"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toStartOf="@+id/ivMinus"
        app:layout_constraintTop_toBottomOf="@+id/tvAmount"
        android:contentDescription="@string/todos" />
</androidx.constraintlayout.widget.ConstraintLayout>